[gd_scene load_steps=9 format=3 uid="uid://bufey13fhtkyt"]

[ext_resource type="Theme" uid="uid://beha4ndul0p5x" path="res://fonts/Izayoi_Theme_Chapter_Title.tres" id="1_r5dw1"]
[ext_resource type="Script" uid="uid://cxeulvixibbeb" path="res://scenes/GUI/chapter_splash.gd" id="2_8ba2g"]
[ext_resource type="FontFile" uid="uid://ckgxohqlgjy7p" path="res://fonts/Quintessential/Quintessential.otf" id="3_cibj8"]
[ext_resource type="FontFile" uid="uid://b4in3wjmpvqcv" path="res://fonts/NewRocker/new-rocker.regular.otf" id="3_udq14"]

[sub_resource type="Animation" id="Animation_e8am0"]
resource_name = "FadeOut"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 1), Color(1, 1, 1, 0)]
}

[sub_resource type="Animation" id="Animation_x0qh2"]
resource_name = "RESET"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 1)]
}

[sub_resource type="Animation" id="Animation_oqg5l"]
resource_name = "Splash"
length = 3.5
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("TitleNode:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(-800, 317), Vector2(600, 317)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("TitleNode/TitlePanel/ChTitle:self_modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 1.9, 2.5),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Color(1, 1, 1, 0), Color(1, 1, 1, 0), Color(1, 1, 1, 1)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("TitleNode/ChPanel/ChHBox/ChLb:self_modulate")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.5, 1),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Color(1, 1, 1, 0), Color(1, 1, 1, 0), Color(1, 1, 1, 1)]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("TitleNode/ChPanel/ChHBox/ChNum:self_modulate")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0, 0.5, 1),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Color(1, 1, 1, 0), Color(1, 1, 1, 0), Color(1, 1, 1, 1)]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("TitleNode/TitlePanel:position")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0, 1.5, 2.5),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Vector2(0, 0), Vector2(0, 0), Vector2(0, 100)]
}
tracks/5/type = "value"
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/path = NodePath("PanelContainer/Panel:self_modulate")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/keys = {
"times": PackedFloat32Array(0, 0.502999),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 1), Color(1, 1, 1, 0.235294)]
}
tracks/6/type = "value"
tracks/6/imported = false
tracks/6/enabled = true
tracks/6/path = NodePath("TitleNode/TimePanel/ChTime:self_modulate")
tracks/6/interp = 1
tracks/6/loop_wrap = true
tracks/6/keys = {
"times": PackedFloat32Array(0, 2.9, 3.2),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Color(1, 1, 1, 0), Color(1, 1, 1, 0), Color(1, 1, 1, 1)]
}
tracks/7/type = "value"
tracks/7/imported = false
tracks/7/enabled = true
tracks/7/path = NodePath("TitleNode/TimePanel:position")
tracks/7/interp = 1
tracks/7/loop_wrap = true
tracks/7/keys = {
"times": PackedFloat32Array(0, 2.5),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(0, 100), Vector2(0, 200)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_v3od1"]
_data = {
&"FadeOut": SubResource("Animation_e8am0"),
&"RESET": SubResource("Animation_x0qh2"),
&"Splash": SubResource("Animation_oqg5l")
}

[node name="ChapterSplash" type="Control"]
layout_mode = 3
anchors_preset = 0
mouse_filter = 2
theme = ExtResource("1_r5dw1")
script = ExtResource("2_8ba2g")

[node name="PanelContainer" type="PanelContainer" parent="."]
layout_mode = 1
offset_right = 1920.0
offset_bottom = 1080.0
mouse_filter = 2

[node name="Panel" type="Panel" parent="PanelContainer"]
self_modulate = Color(1, 1, 1, 0.235294)
layout_mode = 2
mouse_filter = 2

[node name="TitleNode" type="Control" parent="."]
anchors_preset = 0
offset_left = 600.0
offset_top = 317.0
offset_right = 640.0
offset_bottom = 357.0
mouse_filter = 2
metadata/_edit_use_anchors_ = true

[node name="ChPanel" type="PanelContainer" parent="TitleNode"]
layout_mode = 2
offset_right = 763.0
offset_bottom = 132.0
mouse_filter = 2

[node name="ChHBox" type="HBoxContainer" parent="TitleNode/ChPanel"]
layout_mode = 2
mouse_filter = 2
alignment = 1

[node name="ChLb" type="Label" parent="TitleNode/ChPanel/ChHBox"]
layout_mode = 2
theme_override_colors/font_color = Color(0.65098, 0.545098, 0, 1)
text = "Chapter "

[node name="ChNum" type="Label" parent="TitleNode/ChPanel/ChHBox"]
layout_mode = 2
theme_override_colors/font_color = Color(0.65098, 0.545098, 0, 1)
theme_override_fonts/font = ExtResource("3_cibj8")
text = "%s"

[node name="TitlePanel" type="PanelContainer" parent="TitleNode"]
layout_mode = 2
offset_top = 100.0
offset_right = 763.0
offset_bottom = 232.0
mouse_filter = 2

[node name="ChTitle" type="Label" parent="TitleNode/TitlePanel"]
layout_mode = 2
theme_override_colors/font_color = Color(0.784314, 0.784314, 0.784314, 1)
theme_override_fonts/font = ExtResource("3_udq14")
theme_override_font_sizes/font_size = 50
text = "Chapter Title"
horizontal_alignment = 1

[node name="TimePanel" type="PanelContainer" parent="TitleNode"]
layout_mode = 0
offset_top = 200.0
offset_right = 763.0
offset_bottom = 331.995
mouse_filter = 2

[node name="ChTime" type="Label" parent="TitleNode/TimePanel"]
self_modulate = Color(1, 1, 1, 0.866894)
layout_mode = 2
theme_override_colors/font_color = Color(0, 1, 0, 1)
theme_override_fonts/font = ExtResource("3_udq14")
theme_override_font_sizes/font_size = 50
text = "00:00 AM"
horizontal_alignment = 1

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
&"": SubResource("AnimationLibrary_v3od1")
}
